--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>br.ufsc.bridge</groupId>
     <artifactId>validation</artifactId>
-    <version>1.4.14</version>
+    <version>1.4.15-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Bridge Platform - Validation</name>
@@ -253,6 +253,6 @@
         <connection>scm:git:git@github.com:laboratoriobridge/validation.git</connection>
         <url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
         <developerConnection>scm:git:git@github.com:laboratoriobridge/validation.git</developerConnection>
-        <tag>1.4.14</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
