--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>br.ufsc.bridge</groupId>
     <artifactId>validation</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <packaging>jar</packaging>
 
     <name>Bridge Platform - Validation</name>
@@ -256,6 +256,6 @@
         <connection>scm:git:git@github.com:laboratoriobridge/validation.git</connection>
         <url>scm:git:git@github.com:laboratoriobridge/validation.git</url>
         <developerConnection>scm:git:git@github.com:laboratoriobridge/validation.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>2.0.2</tag>
     </scm>
 </project>
